# hobo

./: .agignore  .gitignore  404.html  Cargo.toml  LICENSE  README.md  ajour.md  basic-concepts.html  building-the-dom.html  clippy.bat  css-progress.md  getting-started.html  ideas.md  index.html  print.html  publish.rs  recipes.html  release.toml  rust-components.bat  rust-toolchain  searchindex.js  searchindex.json  set-version.rs  state.html  styling.html  test.bat  test.rs  utilities.html
basic-concepts/: borrowing-and-storage.html  children-and-parent.html  dom-events.html  element.html  entities-components-resources.html  hobo-components.html  hobo-create.html  removing-and-replacing-elements.html  styling.html  traits.html
basic-concepts/styling/: at-rules.html  colors.html  property.html  selector.html
book/: book.toml
book/src/: README.md  SUMMARY.md  basic-concepts.md  building-the-dom.md  getting-started.md  recipes.md  state.md  styling.md  utilities.md
book/src/basic-concepts/: borrowing-and-storage.md  children-and-parent.md  dom-events.md  element.md  entities-components-resources.md  hobo-components.md  hobo-create.md  removing-and-replacing-elements.md  styling.md  traits.md
book/src/basic-concepts/styling/: at-rules.md  colors.md  selector.md
book/src/recipes/: async-and-is-dead.md  elements-that-change.md  logging.md  svgs.md
book/src/state/: e!.md  hobo_trick.md  queries.md  raw_element.md  rc_refcell.md  signals.md  state.md
book/src/styling/: at-rules.md  colors.md  every-way-to-make-a-class.md  precedence-gotchas.md  property.md  selector.md
book/src/utilities/: events.md  slot.md  web_str.md
crates/hobo_core/: Cargo.toml
crates/hobo_core/src/: create.rs  dom_events.rs  element.rs  enclose.rs  entity.rs  hierarchy.rs  lib.rs  prelude.rs  query.rs  racy_cell.rs  resource.rs  storage.rs  web_str.rs
crates/hobo_core/tests/: leak_check.rs
crates/hobo_css/: Cargo.toml
crates/hobo_css/src/: append_property.rs  lib.rs  media.rs  prelude.rs  selector.rs  shortcuts.rs
crates/hobo_css/src/properties/: background.rs  filter.rs  grid.rs  padding.rs  svg.rs  transform.rs
crates/hobo_css/src/shortcuts/: flexbox.rs
crates/hobo_css/tests/: properties.rs
crates/hobo_css_macros/: Cargo.toml
crates/hobo_css_macros/src/: easy_enum.rs  lib.rs  prelude.rs
crates/hobo_derive/: Cargo.toml
css/: Cargo.toml  fuck.rs
css/css_macros/: Cargo.toml
css/css_macros/src/: easy_enum.rs  lib.rs  media.rs  prelude.rs  selector.rs
css/css_macros_decl/: Cargo.toml
css/css_macros_decl/src/: lib.rs
css/macros/: Cargo.toml
css/macros/src/: easy_enum.rs  lib.rs  media.rs  prelude.rs  selector.rs
css/macros_decl/: Cargo.toml
css/src/: append_property.rs  color.rs  font_face.rs  lib.rs  media.rs  prelude.rs  properties.rs  selector.rs  shortcuts.rs  units.rs
css/src/properties/: animation.rs  appearance.rs  background.rs  border.rs  box_sizing.rs  clip_path.rs  dimensions.rs  display.rs  filter.rs  flex.rs  flex_wrap.rs  grid.rs  margin.rs  overflow.rs  padding.rs  position.rs  svg.rs  text.rs  transform.rs  visibility.rs
css/src/shortcuts/: flexbox.rs
css/tests/: properties.rs
derive/: Cargo.toml
derive/src/: lib.rs
hobo/: Cargo.toml
hobo/src/: components.rs  create.rs  dom_events.rs  element.rs  enclose.rs  entity.rs  events.rs  hierarchy.rs  lib.rs  prelude.rs  query.rs  racy_cell.rs  resource.rs  signals_ext.rs  storage.rs  style_storage.rs  web_str.rs  world.rs
hobo/src/create/: html.rs  svg.rs
hobo_css/: Cargo.toml
hobo_css/src/: append_property.rs  color.rs  colors.rs  font_face.rs  lib.rs  media.rs  properties.rs  selector.rs  units.rs
hobo_css/src/properties/: animation.rs  background.rs  border.rs  clip_path.rs  clip_path_props.rs  dimensions.rs  filter.rs  filter_props.rs  grid.rs  margin.rs  margin_props.rs  padding.rs  padding_props.rs  position_props.rs  svg.rs  text.rs  transform.rs  transform_props.rs
hobo_css_macros/: Cargo.toml
hobo_css_macros/src/: easy_enum.rs  lib.rs  media.rs  prelude.rs  selector.rs
hobo_derive/: Cargo.toml
hobo_derive/src/: lib.rs
lib/: Cargo.toml
lib/src/: basic_element.rs  container.rs  create.rs  dom_events.rs  ecs.rs  element.rs  enclose.rs  entity.rs  events.rs  hierarchy.rs  lib.rs  prelude.rs  query.rs  racy_cell.rs  resource.rs  signals_ext.rs  slot.rs  state.rs  state_slice.rs  storage.rs  style_storage.rs  svg_element.rs  web_str.rs  world.rs
lib/src/_old/: basic_element.rs  container.rs  element.rs  enclose.rs  events.rs  lib.rs  prelude.rs  replaceable.rs  slot.rs  style_storage.rs
lib/src/_old/ecs/: storage.rs
lib/src/_old/state/: tests.rs
lib/src/ecs/: query.rs  storage.rs
lib/src/state/: state_slice.rs  tests.rs
lib/tests/: derives.rs  leak_check.rs
recipes/: async-and-is-dead.html  elements-that-change.html  logging.html  svgs.html
src/: basic_element.rs  components.rs  container.rs  create.rs  css.rs  element.rs  enclose.rs  events.rs  lib.rs  prelude.rs  replaceable.rs  slot.rs  state_slice.rs  style_storage.rs  svg_create.rs  svg_element.rs  web_str.rs
src/css/: properties.rs  selector.rs  units.rs
src/css/properties/: box_sizing.rs  dimensions.rs  display.rs  flex_wrap.rs  margin.rs  overflow.rs  padding.rs  position.rs  visibility.rs
state/: hobo_trick.html  queries.html  raw_element.html  rc_refcell.html  signals.html  state.html
styling/: at-rules.html  colors.html  every-way-to-make-a-class.html  precedence-gotchas.html  property.html  selector.html
tests/: leak_check.rs  node.rs  web.rs
utilities/: events.html  slot.html  web_str.html
