[package]
name = "hobo_css"
version = "0.1.4"
edition = "2018"
license = "MIT"
repository = "https://github.com/grdigital/hobo"
description = "hobo is a Rust frontend framework"
authors = ["GR Digital <contact@grdigital.co.uk>"]
readme = "../README.md"

[dependencies]
hobo_css_macros = "=0.1.4"
hobo_css_macros_decl = "=0.1.4"
ordered-float = { version = "2", default-features = false }
paste = "1"
smart-default = "0.6"
strum = { version = "0.18", features = ["derive"] }
