[package]
name = "hobo_derive"
version = "0.1.8"
edition = "2018"
license = "MIT"
repository = "https://github.com/grdigital/hobo"
description = "hobo is a Rust frontend framework"
authors = ["GR Digital <contact@grdigital.co.uk>"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
derive_utils = "0.10"
proc-macro-error = "1"
proc-macro2 = "1"
proc-quote = "0.3"
quote = "1"
syn = "1"
