[package]
name = "hobo"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/grdigital/hobo"
description = "hobo is a Rust frontend framework"
authors = ["GR Digital <contact@grdigital.co.uk>"]
readme = "../README.md"

[dependencies]
ahash = { version = "0.8", features = ["std", "compile-time-rng"], default-features = false }
as-any = "0.3"
discard = "1"
elsa = "1"
extend = "1"
futures-signals = "0.3"
hobo_css = { path = "../hobo_css", version = "=0.4.0" }
hobo_derive = { path = "../hobo_derive", version = "=0.4.0" }
js-sys = "0.3"
log = "0.4"
num-traits = "0.2"
once_cell = "1"
owning_ref = "0.4"
paste = "1"
shrinkwraprs = "0.3"
slotmap = "1"
smart-default = "0.7"
strum = { version = "0.25", features = ["derive"] }
sugars = "3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize", "strict-macro", "enable-interning"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
stats_alloc = "0.1"
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"Document",
	"RadioNodeList",
	"File",
	"FileList",
	"HtmlCollection",

	"MouseEvent", "KeyboardEvent", "TouchEvent",
	"FocusEvent", "WheelEvent", "DragEvent", "SubmitEvent",
	"InputEvent", "AnimationEvent", "PopStateEvent", "HashChangeEvent",
	"ClipboardEvent",

	"HtmlHtmlElement", "HtmlBaseElement", "HtmlHeadElement", "HtmlLinkElement", "HtmlMetaElement",
	"HtmlStyleElement", "HtmlTitleElement", "HtmlBodyElement", "HtmlElement", "HtmlHeadingElement",
	"HtmlQuoteElement", "HtmlDivElement", "HtmlDListElement", "HtmlHrElement", "HtmlLiElement",
	"HtmlOListElement", "HtmlParagraphElement", "HtmlPreElement", "HtmlUListElement", "HtmlAnchorElement",
	"HtmlBrElement", "HtmlDataElement", "HtmlSpanElement", "HtmlTimeElement", "HtmlAreaElement",
	"HtmlAudioElement", "HtmlImageElement", "HtmlMapElement", "HtmlTrackElement", "HtmlVideoElement",
	"HtmlEmbedElement", "HtmlIFrameElement", "HtmlObjectElement", "HtmlParamElement", "HtmlPictureElement",
	"HtmlSourceElement", "HtmlCanvasElement", "HtmlScriptElement", "HtmlModElement", "HtmlTableCaptionElement",
	"HtmlTableColElement", "HtmlTableElement", "HtmlTableSectionElement", "HtmlTableCellElement", "HtmlTableRowElement",
	"HtmlButtonElement", "HtmlDataListElement", "HtmlFieldSetElement", "HtmlFormElement", "HtmlInputElement",
	"HtmlLabelElement", "HtmlLegendElement", "HtmlMeterElement", "HtmlOptGroupElement", "HtmlOptionElement",
	"HtmlOutputElement", "HtmlProgressElement", "HtmlSelectElement", "HtmlTextAreaElement", "HtmlDetailsElement",
	"HtmlDialogElement", "HtmlMenuElement", "HtmlSlotElement", "HtmlTemplateElement", "SvgsvgElement",
	"SvgAnimateElement", "SvgAnimateMotionElement", "SvgAnimateTransformElement", "SvgCircleElement", "SvgClipPathElement",
	"SvgDefsElement", "SvgDescElement", "SvgEllipseElement", "SvgfeBlendElement", "SvgfeColorMatrixElement",
	"SvgfeComponentTransferElement", "SvgfeCompositeElement", "SvgfeConvolveMatrixElement", "SvgfeDiffuseLightingElement", "SvgfeDisplacementMapElement",
	"SvgfeDistantLightElement", "SvgfeDropShadowElement", "SvgfeFloodElement", "SvgfeFuncAElement", "SvgfeFuncBElement",
	"SvgfeFuncGElement", "SvgfeFuncRElement", "SvgfeGaussianBlurElement", "SvgfeImageElement", "SvgfeMergeElement",
	"SvgfeMergeNodeElement", "SvgfeMorphologyElement", "SvgfeOffsetElement", "SvgfePointLightElement", "SvgfeSpecularLightingElement",
	"SvgfeSpotLightElement", "SvgfeTileElement", "SvgfeTurbulenceElement", "SvgFilterElement", "SvgForeignObjectElement",
	"SvggElement", "SvgImageElement", "SvgLineElement", "SvgLinearGradientElement", "SvgMarkerElement",
	"SvgMaskElement", "SvgMetadataElement", "SvgmPathElement", "SvgPathElement", "SvgPatternElement",
	"SvgPolygonElement", "SvgPolylineElement", "SvgRadialGradientElement", "SvgRectElement", "SvgSetElement",
	"SvgStopElement", "SvgSwitchElement", "SvgSymbolElement", "SvgTextElement", "SvgTextPathElement",
	"SvgTitleElement", "SvgtSpanElement", "SvgUseElement", "SvgViewElement",
]

[features]
experimental = ["hobo_derive/experimental"]
property_macros = ["hobo_css/property_macros"]
