[package]
name = "hobo_css"
version = "0.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/zygomedia/hobo"
description = "hobo is a Rust frontend framework"
authors = ["Zygo Media <contact@zygomedia.com>"]
readme = "../README.md"

[dependencies]
# dyn-clone = "1"
# dyn_partial_eq = "0.1"
hobo_css_macros = { path = "../hobo_css_macros", version = "=0.4.0" }
num-traits = "0.2"
ordered-float = { version = "4", default-features = false }
paste = "1"
smart-default = "0.7"
strum = { version = "0.26", features = ["derive"] }

[lints]
workspace = true
