[package]
name = "hobo_css_macros"
version = "0.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/zygomedia/hobo"
description = "hobo is a Rust frontend framework"
authors = ["Zygo Media <contact@zygomedia.com>"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
derive_utils = "0.14"
heck = "0.5"
itertools = "0.13"
proc-macro-crate = "3"
proc-macro-error = "1"
proc-macro2 = "1"
proc-quote = "0.4"
quote = "1"
syn = "2"

[lints]
workspace = true
