[package]
name = "hobo_derive"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/grdigital/hobo"
description = "hobo is a Rust frontend framework"
authors = ["GR Digital <contact@grdigital.co.uk>"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
derive_utils = "0.11"
proc-macro-crate = "1"
proc-macro-error = "1"
proc-macro2 = "1"
proc-quote = "0.4"
quote = "1"
syn = "1"
