[package]
name = "hobo_derive"
version = "0.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/zygomedia/hobo"
description = "hobo is a Rust frontend framework"
authors = ["Zygo Media <contact@zygomedia.com>"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
derive_utils = "0.14"
proc-macro-crate = "3"
proc-macro2 = "1"
proc-quote = "0.4"
quote = "1"
syn = "2"

[features]
experimental = []

[lints]
workspace = true
