[package]
name = "hobo_css_macros"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/grdigital/hobo"

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
itertools = "0.9"
proc-macro-crate = "0.1"
proc-macro-error = "1"
proc-macro-hack = "0.5"
proc-macro2 = "1"
proc-quote = "0.3"
quote = "1"
syn = "1"
