[package]
name = "hobo_css_macros_decl"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/grdigital/hobo"
description = "hobo is a Rust frontend framework"
authors = ["GR Digital"]

[dependencies]
css_macros = { package = "hobo_css_macros", version = "0.1" }
proc-macro-hack = "0.5"

[patch.crates-io]
css_macros = { package = "hobo_css_macros", path = "../css_macros" }
