[package]
name = "hobo_css_macros"
version = "0.1.10"
edition = "2018"
license = "MIT"
repository = "https://github.com/grdigital/hobo"
description = "hobo is a Rust frontend framework"
authors = ["GR Digital <contact@grdigital.co.uk>"]
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
derive_utils = "0.11"
heck = "0.3"
itertools = "0.10"
proc-macro-crate = "0.1"
proc-macro-error = "1"
proc-macro-hack = "0.5"
proc-macro2 = "1"
proc-quote = "0.3"
quote = "1"
syn = "1"
