[package]
name = "hobo_css_macros_decl"
version = "0.1.4"
edition = "2018"
license = "MIT"
repository = "https://github.com/grdigital/hobo"
description = "hobo is a Rust frontend framework"
authors = ["GR Digital <contact@grdigital.co.uk>"]
readme = "../../README.md"

[dependencies]
hobo_css_macros = "=0.1.4"
proc-macro-hack = "0.5"
